adding week 6 files

--- a/ems/views/footer.ejs
+++ b/ems/views/footer.ejs
@@ -1,6 +1,8 @@
-<footer>
-  <p>&copy; Loren Wetzel <%= new Date().getFullYear() %></p>
+<footer class="clearfix">
+  <br>
+  <p class="text-center">&copy; Loren Wetzel <%= new Date().getFullYear() %></p>
 </footer>
+<% include scripts %>
 </body>
 
 </html>
