--- a/ems/views/index.ejs
+++ b/ems/views/index.ejs
@@ -2,5 +2,16 @@
 <% include navbar%>
 <div class="container">
 
+<h2 class="text-center">Employee Management System</h2>
+<br><br>
+<p>Welcome to the new Employee Management System. We hope you find this system easy to use.</p>
+<br>
+<div class="list-group">
+  <a href="/list" class="list-group-item list-group-item-action">
+    Employee Records
+  </a>
+  <a href="/new" class="list-group-item list-group-item-action">Enter a new Employee</a>
+</div>
+
   <% include footer %>
 </div>
