--- a/ems/views/navbar.ejs
+++ b/ems/views/navbar.ejs
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <a href="#" class="navbar-brand"><%= title %></a>
   <ul class="navbar-nav">
-    <li class="nav-item active">
-      <a href="#" class="nav-link">Home</a>
+    <li class="nav-item">
+      <a href="/" class="nav-link">Home</a>
     </li>
     <li class="nav-item">
-      <a href="#" class="nav-link">About?</a>
+      <a href="/list" class="nav-link">Employee Records</a>
     </li>
     <li class="nav-item">
-      <a href="#" class="nav-link">Contact Us?</a>
+      <a href="/new" class="nav-link">New Entry</a>
     </li>
   </ul>
 </nav>
