--- a/ems/views/list.ejs
+++ b/ems/views/list.ejs
@@ -1,29 +1,37 @@
 <% include header %>
 <% include navbar%>
-<div class="container">
-<h2 class="text-center"><%= title %></h2>
-<br><br>
-<div class="table-responsive">
-<table class="table table-striped table-hover">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Email</th>
-        <th scope="col">&nbsp;</th>
-      </tr>
-    </thead>
-    <tbody>
-<!-- for each employee in database -->
-      <tr>
-        <td scope="row">Emp first name</td>
-        <td>emp last name</td>
-        <td>emp email</td>
-        <td><button class="btn btn-primary btn-sm">Link to invididual view</button></td>
-      </tr>
-<!-- end for each -->
-    </tbody>
-  </table>
-</div>
+<div class="container" style="width: 50%;">
+  <br>
+  <% if(employees.length){ %>
+
+  <h2><%= title %></h2>
+  <br>
+
+  <a href="/new">Add New</a>
+
+  <div class="table-responsive">
+    <table class="table table-striped table-hover">
+      <thead class="thead-dark">
+        <tr>
+          <th>First Name</th>
+          <th>Last Name</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- for each employee in database -->
+        <% employees.forEach(function(entry){ %>
+        <tr>
+          <td><%= entry.firstName %></td>
+          <td><%= entry.lastName %></td>
+        </tr>
+      </tbody>
+      <!-- end for each -->
+      <% }) %>
+    </table>
+
+    <% } else { %>
+    Ain't nothing here yet... <a href="/new">Add Something!!!</a>
+    <% } %>
+  </div>
   <% include footer %>
 </div>
