--- a/ems/views/new.ejs
+++ b/ems/views/new.ejs
@@ -1,41 +1,43 @@
 <% include header %>
 <% include navbar%>
-<div class="container">
-  <h2 class="text-center"><%= title %></h2>
-
-  <form action="view.ejs" method="POST">
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="fName">First Name</label>
-        <input type="text" class="form-control" id="fName" placeholder="First Name">
-      </div>
-      <div class="form-group col-md-6">
-        <label for="lName">Last Name</label>
-        <input type="text" class="form-control" id="lName" placeholder="Last Name">
-      </div>
-      <div class="form-group col-md-6">
+<div class="container" style="width: 50%;">
+  <br>
+  <h2><%= title %></h2>
+  <br>
+  <form action="/process" method="POST">
+    <!-- <div class="form-row"> -->
+    <div class="form-group">
+      <label for="txtFirstName">First Name</label>
+      <input type="text" class="form-control" name="txtFirstName" id="txtFirstName" placeholder="First Name">
+    </div>
+    <div class="form-group">
+      <label for="txtLastName">Last Name</label>
+      <input type="text" class="form-control" name="txtLastName" id="txtLastName" placeholder="Last Name">
+    </div>
+    <!-- </div> -->
+    <!-- <div class="form-group col-md-6">
         <label for="email">Email</label>
-        <input type="email" class="form-control" id="email" placeholder="email@something.com">
+        <input type="email" class="form-control" name="email" id="email" placeholder="email@something.com">
       </div>
       <div class="form-group col-md-6">
         <label for="phone">Phone Number</label>
-        <input type="tel" class="form-control" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
+        <input type="tel" class="form-control" name="phone" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
           placeholder="123-45-6789">
       </div>
     </div>
     <div class="form-group">
       <label for="address">Address</label>
-      <input type="text" class="form-control" id="address" placeholder="123 Something Ave">
+      <input type="text" class="form-control" name="address" id="address" placeholder="123 Something Ave">
     </div>
     <div class="form-group">
       <label for="address2">Address 2</label>
-      <input type="text" class="form-control" id="address2" placeholder="Apartment, studio, or floor">
+      <input type="text" class="form-control" name="address2" id="address2" placeholder="Apartment, studio, or floor">
     </div>
 
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="city">City</label>
-        <input type="text" class="form-control" id="city">
+        <input type="text" class="form-control" name="city" id="city">
       </div>
       <div class="form-group col-md-4">
         <label for="state">State</label>
@@ -96,11 +98,17 @@
       </div>
       <div class="form-group col-md-2">
         <label for="zipCode">Zip</label>
-        <input type="text" class="form-control" id="zipCode">
+        <input type="text" class="form-control" name="zipCode" id="zipCode">
       </div>
+    </div> -->
+
+    <div class="form-group">
+      <!-- CSRF token -->
+      <input name="_csrf" value="<%= csrfToken %>" type="hidden" />
+
+      <button type="submit" class="btn btn-primary">Submit</button>
+      <input type="reset" class="btn btn-secondary">
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-    <input type="reset" class="btn btn-secondary">
   </form>
   <% include footer %>
 </div>
