--- a/ems/views/view.ejs
+++ b/ems/views/view.ejs
@@ -1,6 +1,9 @@
 <% include header %>
 <% include navbar%>
-<div class="container">
-<h2 class="text-center"><%= title %></h2>
+<div class="container" style="width: 50%;">
+  <br>
+  <h2><%= title %></h2>
+  <br>
+
   <% include footer %>
 </div>
