--- a/ems/views/list.ejs
+++ b/ems/views/list.ejs
@@ -2,12 +2,13 @@
 <% include navbar%>
 <div class="container" style="width: 50%;">
   <br>
-  <% if(employees.length){ %>
 
   <h2><%= title %></h2>
   <br>
 
-  <a href="/new">Add New</a>
+  <% if(employees.length){ %>
+
+  <p class="text-right"><a href="/new">Add New</a></p>
 
   <div class="table-responsive">
     <table class="table table-striped table-hover">
@@ -15,6 +16,7 @@
         <tr>
           <th>First Name</th>
           <th>Last Name</th>
+          <th class="text-center">View Individual</th>
         </tr>
       </thead>
       <tbody>
@@ -23,15 +25,21 @@
         <tr>
           <td><%= entry.firstName %></td>
           <td><%= entry.lastName %></td>
+          <td class="text-center">
+            <a href="/view/<%= entry.firstName %>" class="btn btn-primary btn-sm">View</a>
+          </td>
         </tr>
+        <!-- end for each -->
+        <% }) %>
       </tbody>
-      <!-- end for each -->
-      <% }) %>
     </table>
-
-    <% } else { %>
-    Ain't nothing here yet... <a href="/new">Add Something!!!</a>
-    <% } %>
   </div>
+
+  <% } else { %>
+
+  Ain't nothing here yet... <a href="/new">Add Something!!!</a>
+
+  <% } %>
+
   <% include footer %>
 </div>
