--- a/ems/views/view.ejs
+++ b/ems/views/view.ejs
@@ -2,8 +2,24 @@
 <% include navbar%>
 <div class="container" style="width: 50%;">
   <br>
-  <h2><%= title %></h2>
+  <h2>Employee Details</h2>
   <br>
+
+  <div>
+    <div class="form-group">
+      <label for="txtFirstName">First Name: </label>
+      <input type="text" class="form-control col-6" id="txtFirstName" name="txtFirstName"
+        value="<%= employee[0].firstName%>" readonly />
+    </div>
+
+    <div class="form-group">
+      <label for="txtLastName">Last Name: </label>
+      <input type="text" class="form-control col-6" id="txtLastName" name="txtLastName"
+        value="<%= employee[0].lastName %>" readonly />
+    </div>
+    <br>
+    <a href="/list">Return to list</a>
+  </div>
 
   <% include footer %>
 </div>
